refactor(LottoPrizes): LottoPrizeCalculator로 당첨 통계 로직 추출